# biosig

./: README.md
bioprofeed/: README
bioprofeed/include/: bsv_module.h
bioprofeed/main/: Makefile.am  bsview.glade  bsview.gladep  configure.in
bioprofeed/main/po/: Makefile.in  Makefile.in.in
bioprofeed/main/src/: Makefile.am  callbacks.c  callbacks.h  dataaq.c  dataaq.h  draw.c  draw.h  gdffile.c  gdffile.h  interface.c  interface.h  main.c  pref.c  pref.h  squeue.c  squeue.h
bioprofeed/modules/gmobilab/src/: Makefile.am  callbacks.c  callbacks.h  interface.c  interface.h  main.c  main.h
bioprofeed/modules/modeeg/: clean.sh  configure.in  modeeg.glade  modeeg.gladep
bioprofeed/modules/modeeg/po/: Makefile.in
bioprofeed/modules/modeeg/src/: Makefile.am  callbacks.h  main.c
bioprofeed/modules/modeeg/testing/: ch1undch2kurzschluss.gdf  ch1undch2stoerung.gdf
bioprofeed/modules/ni-6024e/src/: Makefile.am  callbacks.c  callbacks.h  interface.c  main.c  main.h  main.loT
bioprofeed/modules/testmodule/src/: Makefile.am  callbacks.c  interface.c  main.c
biosig/: Contents.m  INDEX  INSTALL  README  install.m
biosig/demo/: Contents.m  batch.m  bench_biosig.m  demo1.m  demo2.m  demo3.m  demo4.m  demo5.m  demo6.m  demo7.m  demo8.m  demo9.m  make_cc7.m  scptest.m
biosig/doc/: Contents.m  DecimalFactors.txt  elecpos.txt  eventcodes.txt  header.txt  leadidtable_scpecg.txt  units.csv
biosig/eeglab/: eegplugin_biosig.m  pop_biosig.m  pop_readbdf.m
biosig/maybe-missing/: README  all.m  any.m  barh.m  beta.m  bilinear.m  butter.m  diff.m  eye.m  filter.m  findstr.m  fix.m  isalpha.m  isdigit.m  isfield.m  isfinite.m  isstruct.m  length.m  lower.m  mat2cell.cc  poly.m  rat.m  regexp.cc  regexprep.cc  sign.m  sqrt.m  str2double.m  strfind.m  strfind2.m  strfind3.m  strmatch.m  strtok.m  strvcat.m  tf2zp.m  trace.m  unique.m  upper.m  version.m
biosig/t200/: Contents.m  adb2event.m  bdf2biosig_events.m  bkropen.m  bni2hdr.m  bv2biosig_events.m  cntopen.m  eegchkhdr.m  eegclose.m  eegeof.m  eegopen.m  eegread.m  eegrewind.m  eegseek.m  eegtell.m  eegwrite.m  eload.m  eventcodes.txt  famosopen.m  fefopen.m  fepi2gdf.m  fltopen.m  gdfcheck.m  gdfdatatype.m  getfiletype.m  gtfopen.m  hdr2ascii.m  header.txt  iopen.m  iread.m  leadidcodexyz.m  leadidtable_scpecg.txt  loadeeg.m  loadlexi.m  mat2sel.m  matread.m  mwfopen.m  opendicom.m  openeep.m  openegi.m  (+26 more)
biosig/t200_FileAccess/: Contents.m  bdf2biosig_events.m  cntopen.m  fltopen.m  gdfdatatype.m  getfiletype.m  hdr2ascii.m  leadidcodexyz.m  openldr.m  physicalunits.m  save2gdf.m  sclose.m  sload.m  sopen.m  sread.m  ssave.m  str2double.m  swrite.m
biosig/t250/: Contents.m  artifact_selection.m  detectmuscle.m  eeg2hist.m  get_regress_eog.m  gettrigger.m  hist2limits.m  hist2res.m  identify_eog_channels.m  qc_histo.m  regress_eog.m  remove5060hz.m  rs.m  spatialfilter.m  trigg.m
biosig/t250_ArtifactPreProcessingQualityControl/: detect_spikes_bursts.m  eeg2hist.m  get_regress_eog.m  identify_eog_channels.m  regress_eog.m  spikes2bursts.m
biosig/t300/: Contents.m  abp.m  arspectrum.m  baccala2001.m  bandpower.m  barlow.m  berger.m  brainrate.m  bss.m  correlation_with_reference.m  csp.m  desatur.m  evoked_potential.m  getar0.m  heartratevariability.m  hjorth.m  lumped.m  mvfreqz.m  nqrsdetect.m  oahe.m  paynter.m  processing.m  qrscorr.m  qrsdetect.m  synthetic_ecg.m  tdp.m  tfmvar.m  tvaar.m  wackermann.m
biosig/t300_FeatureExtraction/: Contents.m  arspectrum.m  baccala2001.m  bandpower.m  barlow.m  berger.m  burst_onset_phase.m  csp.m  desatur.m  ectbcorr.m  evoked_potential.m  getar0.m  heartratevariability.m  hjorth.m  lumped.m  nqrsdetect.m  oahe.m  paynter.m  processing.m  qrscorr.m  qrsdetect.m  respdetect.m  tfmvar.m
biosig/t310/: bootts.m  calcAveMap.m  calcErdsMap.m  calcHR.m  calcHRSpectrum.m  calcHRr.m  calcHRwhole.m  calcPLV.m  calcRawTrials.m  calcSpectrum.m  dftfilt.m  erdsMap.m  gaborPLV.m  getBandpower.m  getErds.m  getErdsValues.m  getMontage.m
biosig/t310_ERDSMaps/: calcErdsMap.m  (+5 more)
biosig4c++/: INSTALL  Makefile  Makefile.win32  README  THANKS  bin2rec  biosig-dev.h  biosig-network.c  biosig-network.h  biosig.c  biosig.h  biosig.pro  biosig_client.c  biosig_external.h  biosig_server.c  demo.c  eventcodes.awk  example.py  gdf2scp.c  heka2itx  libbiosig.pro  main.c  makeSV.sh  mexSLOAD.cpp  pdp2gdf.c  physicalunits.c  rec2bin  save2aecg  save2aecg.c  save2gdf.c  save2scp  save2scp.c  scp2gdf.c  scp_hl7aecg.c  sopen_hl7aecg.c  swig.i  test  units.csv
biosig4java/: BioSig.java  README
biosig4python/: README  __init__.py  biosig.py
sigviewer/: Changelog.txt  Makefile
(+581 files in other folders)
