dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(bsview, 0.1)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_LIBTOOL_DLOPEN
AC_LIBTOOL_SETUP
AM_PROG_LIBTOOL
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_C_BIGENDIAN([CFLAGS="$CFLAGS -DBENDIAN"], [CFLAGS="$CFLAGS -DLENDIAN"])
AC_ARG_WITH([ipaq], AC_HELP_STRING([--with-ipaq], [Enable ipaq support]), [CFLAGS="$CFLAGS -DIPAQ"])

pkg_modules="gtk+-2.0 >= 2.0.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

Xsed="sed -e s/^X//"
LTLIBOBJS=`echo X"$LIB@&t@OBJS" | \
    $Xsed -e "s,\.[^.]* ,.lo ,g;s,\.[^.]*\$,.lo,"`
AC_SUBST(LTLIBOBJS)

#GETTEXT_PACKAGE=bsview
#AC_SUBST(GETTEXT_PACKAGE)
#AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE")

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

dnl Libraries
AC_LIB_LTDL
AM_WITH_DMALLOC

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
])

