dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(modeeg, 0.1)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AC_LIBTOOL_DLOPEN
AC_LIBTOOL_SETUP
AM_PROG_LIBTOOL
AC_SUBST(LIBTOOL_DEPS)
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_LIB_LTDL
AM_WITH_DMALLOC

Xsed="sed -e s/^X//"
LTLIBOBJS=`echo X"$LIB@&t@OBJS" | \
    $Xsed -e "s,\.[^.]* ,.lo ,g;s,\.[^.]*\$,.lo,"`
AC_SUBST(LTLIBOBJS)

pkg_modules="gtk+-2.0 >= 2.0.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=modeeg
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE([GETTEXT_PACKAGE],[modeeg],[Description])

dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
])

